# Mind-Map

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.pro  build.sh  resources.qrc
algo/: CMakeLists.txt
algo/include/: path.h
algo/src/: main.cpp  path.cpp
include/: MainWindow.h  menu.h  moveitem.h  path.h  scene.h  sceneMenu.h  svgreader.h  svgsaver.h
src/: MainWindow.cpp  main.cpp  menu.cpp  moveitem.cpp  path.cpp  scene.cpp  sceneMenu.cpp  svgreader.cpp  svgsaver.cpp
